--- a/build.gradle
+++ b/build.gradle
@@ -28,8 +28,15 @@ buildscript {
 }
 
 plugins {
-	id "de.undercouch.download" version "5.0.1"
+	id "de.undercouch.download" version "5.0.1",
+	id "org.sonarqube" version "7.0.1.6134"
 }
+
+sonar {
+  properties {
+    property "sonar.projectKey", "OTopCat_libgdx"
+    property "sonar.organization", "otopcat"
+  }}
 
 apply from: "gradle/dependencies.gradle"
 
@@ -218,14 +225,3 @@ if(rootProject.file('override.gradle').exists())
 	apply from: rootProject.file('override.gradle')
 
 apply from: "gradle/dist.gradle"
-
-plugins {
-  id "org.sonarqube" version "7.0.1.6134"
-}
-
-sonar {
-  properties {
-    property "sonar.projectKey", "OTopCat_libgdx"
-    property "sonar.organization", "otopcat"
-  }
-}
