--- a/build.gradle
+++ b/build.gradle
@@ -28,16 +28,19 @@ buildscript {
 }
 
 plugins {
-	id "de.undercouch.download" version "5.0.1",
-	id "org.sonarqube" version "7.0.1.6134"
+	id "de.undercouch.download" version "5.0.1"
+}
+
+plugins {
+  id "org.sonarqube" version "7.0.1.6134"
 }
 
 sonar {
   properties {
     property "sonar.projectKey", "OTopCat_libgdx"
     property "sonar.organization", "otopcat"
-  }}
-
+  }
+}
 apply from: "gradle/dependencies.gradle"
 
 ext {
