--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: SonarQube Build & Analyze
+name: SonarQube Desktop-only
 
 on:
   push:
@@ -7,8 +7,7 @@ on:
     types: [ opened, synchronize, reopened ]
 
 jobs:
-  build-and-analyze:
-    name: Build and analyze
+  build-and-analyze-desktop:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -18,7 +17,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # better PR analysis
+          fetch-depth: 0
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -46,29 +45,32 @@ jobs:
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle', '**/*.gradle.kts', '**/gradle-wrapper.properties') }}
           restore-keys: ${{ runner.os }}-gradle
 
-      # --- Android only (safe to keep for LibGDX; remove if not needed) ---
-      - name: Install Android SDK
-        uses: android-actions/setup-android@v3
-
-      - name: Accept licenses & install build tools
+      # --- Create a CI-only settings file that excludes Android (and any other mobile modules) ---
+      # Adjust the includes to match your actual desktop modules.
+      - name: Create desktop-only settings
         run: |
-          yes | sdkmanager --licenses
-          sdkmanager "platforms;android-35" "build-tools;34.0.0"
-      # --------------------------------------------------------------------
+          cat > settings-ci.gradle.kts <<'EOF'
+          rootProject.name = "libgdx-desktop-ci"
+          // Include ONLY desktop-related subprojects here:
+          include(":core", ":desktop")
+          // If you have more non-Android modules, add them:
+          // include(":shared", ":tools", ":lwjgl3", ":headless")
+          EOF
 
       - name: Make Gradle executable
         run: chmod +x gradlew
 
-      # Build first (scanner no longer auto-hooks these tasks)
-      - name: Build
-        run: ./gradlew build --warning-mode all --info
+      # Build only the projects listed in settings-ci.gradle.kts
+      - name: Build desktop
+        run: ./gradlew -c settings-ci.gradle.kts build --warning-mode all --info
 
-      - name: SonarQube analyze
+      # Run SonarQube analysis on just those modules
+      - name: SonarQube analyze (desktop-only)
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          # If you use a self-hosted SonarQube server, set SONAR_HOST_URL as a secret or env:
+          # If using a self-hosted SonarQube, also set SONAR_HOST_URL secret:
           # SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
         run: |
-          ./gradlew sonar \
+          ./gradlew -c settings-ci.gradle.kts sonar \
             -Dsonar.login=${SONAR_TOKEN} \
             ${{ secrets.SONAR_HOST_URL && format('-Dsonar.host.url={0}', secrets.SONAR_HOST_URL) || '' }}
