--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
     types: [ opened, synchronize, reopened ]
 
 jobs:
-  build-and-analyze-desktop:
+  desktop-sonar:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -21,50 +21,44 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
-          distribution: 'zulu'
+          distribution: zulu
           java-version: '17'
-          cache: 'gradle'
+          cache: gradle
 
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
 
-      - name: Cache SonarQube packages
+      - name: Cache SonarQube
         uses: actions/cache@v4
         with:
           path: ~/.sonar/cache
           key: ${{ runner.os }}-sonar
           restore-keys: ${{ runner.os }}-sonar
 
-      - name: Cache Gradle
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle', '**/*.gradle.kts', '**/gradle-wrapper.properties') }}
-          restore-keys: ${{ runner.os }}-gradle
-
       - name: Create desktop-only settings
         run: |
           cat > settings-ci.gradle.kts <<'EOF'
           rootProject.name = "libgdx-desktop-ci"
-          // Include desktop-friendly modules only
+          // Include ONLY desktop-friendly modules here:
           include(":gdx")
           include(":backends:gdx-backend-lwjgl3")
-          // Add other non-Android modules you want analyzed:
+          // Add more non-Android modules if you want them in CI analysis:
+          // include(":backends:gdx-backend-headless")
+          // include(":backends:gdx-backend-lwjgl")
           // include(":extensions:gdx-tools")
+          // include(":extensions:gdx-freetype")
           EOF
 
       - name: Make Gradle executable
         run: chmod +x gradlew
 
-      - name: Build desktop modules
+      - name: Build
         run: ./gradlew -c settings-ci.gradle.kts build --warning-mode all --info
 
-      - name: SonarQube analyze (desktop-only)
+      - name: SonarQube analyze
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          # For self-hosted SonarQube add this secret:
+          # If using a self-hosted SonarQube server, set this repo secret too:
           # SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
         run: |
           ./gradlew -c settings-ci.gradle.kts sonar \
