Conditionally apply publish.gradle based on property

--- a/build.gradle
+++ b/build.gradle
@@ -326,7 +326,9 @@ tasks.register('fetchNatives', Copy) {
 	doNotTrackState("Don't track state")
 }
 
-apply from: rootProject.file('publish.gradle')
+if (!project.hasProperty("skipPublishGradle")) {
+  apply from: rootProject.file('publish.gradle')
+}
 
 if(rootProject.file('override.gradle').exists())
 	apply from: rootProject.file('override.gradle')
