Add conditional application of dist.gradle
Conditionally apply dist.gradle only if desktopOnly property is not present.

--- a/build.gradle
+++ b/build.gradle
@@ -333,4 +333,6 @@ if (!project.hasProperty("skipPublishGradle")) {
 if(rootProject.file('override.gradle').exists())
 	apply from: rootProject.file('override.gradle')
 
-apply from: "gradle/dist.gradle"
+if (!project.hasProperty("desktopOnly")) {
+  apply from: "gradle/dist.gradle"
+}
