--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,7 +42,7 @@ jobs:
           // Include ONLY desktop-friendly modules here:
           include(":gdx")
           include(":backends:gdx-backend-lwjgl3")
-          // If you want more non-Android modules, uncomment/add:
+          // Add more non-Android modules if you want:
           // include(":backends:gdx-backend-headless")
           // include(":backends:gdx-backend-lwjgl")
           // include(":extensions:gdx-tools")
@@ -50,13 +50,13 @@ jobs:
           EOF
 
       - name: Build
-        run: ./gradlew -c settings-ci.gradle.kts -PskipPublishGradle=true build --warning-mode all --info
+        run: ./gradlew -c settings-ci.gradle.kts -PdesktopOnly=true build --warning-mode all --info
 
       - name: SonarQube analyze
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           # SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}  # if self-hosted
         run: |
-          ./gradlew -c settings-ci.gradle.kts -PskipPublishGradle=true sonar \
+          ./gradlew -c settings-ci.gradle.kts -PdesktopOnly=true sonar \
             -Dsonar.login=${SONAR_TOKEN} \
             ${{ secrets.SONAR_HOST_URL && format('-Dsonar.host.url={0}', secrets.SONAR_HOST_URL) || '' }}
